# aeroassault64

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  Makefile  README.md  requirements.txt
.github/workflows/: engine-windows.yml  repo-check.yml
Docs/: Architecture.md  Debugging.md  SystemPrompt.md  Workflow.md
Docs/RepoInjests/BanjoKazooie/: banjorecomp-banjorecomp-8a5edab282632443.txt  repomix-output-BanjoRecomp-BanjoRecomp.xml
Docs/RepoInjests/DinoPlanet/: dinosaurplanetrecomp-dino-recomp-8a5edab282632443.txt  repomix-output-DinosaurPlanetRecomp-dino-recomp.xml
Docs/RepoInjests/Kirby64/: kirby64ret-kirby64recomp-8a5edab282632443.txt  repomix-output-Kirby64Ret-Kirby64Recomp.xml
Docs/RepoInjests/PilotWings64/: repomix-output-gcsmith-Pilotwings64Decomp.xml
Docs/RepoInjests/Pilotwings/: README.txt
Docs/RepoInjests/StarFox64/: harbourmasters-starship-8a5edab282632443.txt
Docs/Rom/: README.txt
RecompiledFuncs/: README.txt
assets/: ipl3_bin.s
config/: .afa_usa_rom_xxh3.example  aerofighters_assault.n64recomp.toml  link_extern_additions.txt  reloc_addrs.txt  splat.yaml  symbol_addrs.txt  undefined_funcs_auto.txt  undefined_syms_auto.txt
config/afa_assets/: README.txt
config/afa_engine/: README.txt  dump_syms.toml  patches.toml.template
config/afa_rsp/: README.txt  aspMain.afa.us.template.toml  njpgdspMain.afa.us.template.toml
lib/: README.txt
patches/: README.txt
roms/: README.txt
src/: README.txt
tools/: README.txt  afa_fixup_datasyms_vram.py  afa_fixup_recompiled_vram.py  compute_aero_rom_xxh3.py  dedupe_post_data_bss.py  gen_splat_extern_ld.py  n64recomp_stub_until_green.py  phase5_run_aero_n64recomp.ps1  phase6_afa_generate_syms.ps1  phase6_afa_retail_prepare.ps1  phase6_ci_ensure_recompiledfuncs_stub.ps1  phase6_copy_n64recomp_to_engine.ps1  phase6_engine_cmake.ps1  phase6_engine_cmake_vs2022.ps1  phase6_full_recomp_afa.ps1  phase6_link_recompiledfuncs.ps1  phase6_materialize_no_mm_engine_files.ps1  phase6_materialize_no_mm_engine_files.py  phase6_mm_engine_prereq_check.py  phase6_n64recomp_mm.ps1  phase6_rsprecomp_afa.ps1  phase6_rsprecomp_engine.ps1  phase6_run_boot_log.ps1  phase6_setup_windows.ps1  phase6_smoke_engine.ps1  rsp_rom_capstone_mips.py  rsprecomp_find_njpg2.py  rsprecomp_fine_njpg.py  rsprecomp_left_edge.py  rsprecomp_patch_rsp_cpp.py  rsprecomp_probe_labels.py  rsprecomp_scan_offsets.py  verify_entrypoint_sync.py  verify_n64recomp_toml.py  verify_phase6_layout.py  verify_rodata_splits_sync.py  verify_splat_makefile_sync.py
tools/ghidra/: Find_AFA_Boot_Dma_Patch_Candidates.py  Find_RSP_Microcode_ROM_Hints.py  Phase2_Closeout_Report.py  Phase3_Closeout_Report.py  Phase3_Ensure_PostData_Function.py  README.txt  RSPRecomp_AFA_AllInOne.py  RSPRecomp_Confirm_Findings.py  RSP_Function_Return_Reg_Slice.py  RSP_IMEM_Load_And_Helper_Call_Trace.py  RSP_Jal_Arg_Register_Slice.py  RSP_Jal_Call_Sites_Disasm_From_Caller.py  RSP_LibUltra_And_IMEM_Scan.py  RSP_List_Jal_Callees_From_Function.py  RSP_RAM_Constant_Base_Memops.py  RSP_RAM_Context_Field_Xrefs.py  RSP_Scheduler_String_Xref_Trace.py
tools/phase6_no_mm_engine/: README.txt  funcs.h  patches_bin.h  patches_bin_stub.c  patches_stub.c  recomp_overlays.inl  rsp_aspMain_stub.cpp  rsp_njpgdsp_stub.cpp
(+2 files in other folders)
